# rust2xml

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  entitlements-appstore.plist  entitlements.plist
.github/workflows/: release.yml
assets/: Info.plist.template  install-linux.sh  rust2xml-gui.desktop
examples/: fhir_multilang_smoke.rs  fhir_smoke.rs  make_ico.rs  sqlite_smoke.rs
run_output/downloads/: rust2xml_lppv.txt
screenshots/macos/: orchestrate.sh
screenshots/windows/: capture.ps1  orchestrate.ps1
src/: bag_fhir_extractor.rs  builder.rs  calc.rs  chapter_70_hack.rs  cli.rs  compare.rs  compositions.pest  compositions_syntax.rs  compressor.rs  downloader.rs  extractor.rs  fhir_support.rs  foph_sl_downloader.rs  gui.rs  lib.rs  options.rs  parslet_compositions.rs  refdata_cleanup.rs  semantic_check.rs  sqlite_export.rs  util.rs  version.rs  xml_definitions.rs
tests/: pipeline.rs
tests/fixtures/: preparations_minimal.xml
windows/: AppxManifest.xml
winit-patched/src/platform_impl/macos/: ffi.rs
